# exif_delete

./: .gitignore  Makefile  README.md  exif_delete.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yaml  unittests.yaml
test/: __init__.py  test_exif_delete.py
tests/: exif_delete_test.py
